--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,18 +6,21 @@ services:
       - "3000:3000"
     environment:
       - NODE_ENV=development
+      - DBNAME=${ORACLE_DATABASE}
+      - DBUSERNAME=${ORACLE_USERNAME}
+      - DBPASSWORD=${ORACLE_PASSWORD}
     depends_on:
       - db
   db:
     container_name: oracle
     image: container-registry.oracle.com/database/express
     ports:
-      - 1521:1521
+      - ${ORALIST_HOST_PORT}:${ORALIST_CONTAINER_PORT}
       - 8080:8080
-      - 5500:5500
+      - ${ORAEXP_HOST_PORT}:${ORAEXP_CONTAINER_PORT}
     environment:
       - ORACLE_ALLOW_REMOTE=true
-      - ORACLE_PWD=oracle
+      - ORACLE_PWD=${ORACLE_PASSWORD}
 #     volumes:
 #       - oracle:/opt/oracle/oradata
 # volumes:
