--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start1": "ts-node src/index.ts",
+    "start": "node src/app.js"
   },
   "keywords": [],
   "author": "",
